In personal component, even through it had overflow hidden the height was bigger than 1080px so I corrected the skeleton which height was staring from the distance of the top point of 47px So I substracted it to the whole height

--- a/src/Components/Styles/Common.module.css
+++ b/src/Components/Styles/Common.module.css
@@ -84,7 +84,7 @@ least for 2 page */
 }
 .skeleton {
     width:calc(1098px - 300px);
-    height:1080px;
+    height:calc(1080px - 47px); 
     position: relative;
     margin-left: 150px;
     margin-top: 47px;
